--- a/css/demo.css
+++ b/css/demo.css
@@ -1,10 +1,18 @@
-#AIanswer {
+#AIanswer, #current {
     width: 169px;
     height: 15px;
     padding: 2px;
     border: 1px solid #999;
     border-radius: 2px;
     background-color: #eee;
+}
+
+#current {
+    text-align: center;    
+}
+
+#check {
+    opacity: 0;
 }
 
 .map {
@@ -23,4 +31,11 @@ button {
 
 button img {
     max-height: 100%;
+}
+
+.loading {
+    width: 100%;
+    height: 100%;
+    float: left;
+    background-color: red;
 }
