--- a/css/demo.css
+++ b/css/demo.css
@@ -1,10 +1,57 @@
-#AIanswer, #current {
-    width: 169px;
-    height: 15px;
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+body {
+    font-family: Lato, Helvetica, sans-serif;
+}
+
+#game {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    position: relative;
+}
+
+.controls {
+    width: 50%;
+}
+
+form {
+    box-sizing: border-box;
+    padding: 0 15px 0 0;
+    width: 100%;
+}
+
+#AIanswer, #current, #input {
+    min-width: 150px;
+    width: 100%;
+    height: 2em;
     padding: 2px;
     border: 1px solid #999;
     border-radius: 2px;
     background-color: #eee;
+    font-size: 1.25em;
+    box-sizing: border-box;
+}
+
+#AIanswer {
+    position: absolute;
+    bottom: 0;
+    max-width: calc(50% - 17px);
+}
+
+#input {
+    background-color: #fff;
+    box-sizing: border-box;
+}
+
+#input:disabled {
+    background-color: #333;
+}
+
+p {
+    margin: 3px auto;
+    display: block;
+    text-align: center;
 }
 
 #current {
@@ -16,17 +63,29 @@
 }
 
 .map {
-    width: 90%;
+    width: 50%;
     height: 300px;
-    margin: 10px auto;
+    margin: 0 auto;
+    border: 2px solid #aaa;
+    border-radius: 3px;
 }
 
+label {
+    width: 100%;
+}
 button {
-    height: 21px;
     padding: 2px 6px;
     border: 1px solid #aaa;
     border-radius: 2px;
     box-sizing: border-box;
+    margin-bottom: 15px;
+    width: 100%;
+    height: 3em;
+}
+
+button[name="start"] {
+    width: calc(100% - 15px);
+    height: 3.5em;
 }
 
 button img {
@@ -38,4 +97,5 @@ button img {
     height: 100%;
     float: left;
     background-color: red;
+    transition: width 3s linear;
 }
