--- a/css/demo.css
+++ b/css/demo.css
@@ -9,10 +9,13 @@ body {
     display: flex;
     flex-wrap: nowrap;
     position: relative;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 .controls {
     width: 50%;
+    position: relative;
 }
 
 form {
@@ -36,7 +39,7 @@ form {
 #AIanswer {
     position: absolute;
     bottom: 0;
-    max-width: calc(50% - 17px);
+    max-width: calc(100% - 15px);
 }
 
 #input {
@@ -48,6 +51,7 @@ form {
     background-color: #333;
 }
 
+
 p {
     margin: 3px auto;
     display: block;
@@ -55,7 +59,8 @@ p {
 }
 
 #current {
-    text-align: center;    
+    text-align: center; 
+    margin-bottom: 1.5em;
 }
 
 #check {
@@ -64,7 +69,7 @@ p {
 
 .map {
     width: 50%;
-    height: 300px;
+    min-height: 100%;
     margin: 0 auto;
     border: 2px solid #aaa;
     border-radius: 3px;
@@ -92,6 +97,10 @@ button img {
     max-height: 100%;
 }
 
+#submit {
+    margin-bottom: 0;
+}
+
 .loading {
     width: 100%;
     height: 100%;
@@ -113,7 +122,7 @@ button img {
         height: 1.3em;
     }
     
-    #game {
+    main {
         max-height: 50vh;
     }
 }
