--- a/css/demo.css
+++ b/css/demo.css
@@ -3,11 +3,19 @@
 html, body {
     font-family: 'Lato', Helvetica, sans-serif;
     height: 100%;
-    overflow: hidden;
+    min-height: 480px;
+    background-color: #eee;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-image: linear-gradient(to bottom, #eca, #eee); 
 }
 
 .wrapper {
     position: relative;
+    
     width: 100%;
 }
 
@@ -17,9 +25,12 @@ header {
     padding: 15px;
     justify-content: space-between;
     align-items: center;
-    
 }
 
+main {
+    padding: 15px;
+    
+}
 
 #game {
     font-family: 'Lato', sans-serif;
@@ -67,7 +78,7 @@ form {
 }
 
 #input:disabled {
-    background-color: #333;
+    background-color: transparent;
 }
 
 
@@ -76,6 +87,8 @@ p {
     display: block;
     text-align: center;
     font-family: "Lato", sans-serif;
+    margin-left: 15px;
+    margin-bottom: 5px;
 }
 
 #current {
@@ -89,7 +102,7 @@ p {
 
 .map {
     width: 50%;
-    min-height: 100%;
+    min-height: 200px;
     margin: 0 auto;
     border: 2px solid #aaa;
     border-radius: 3px;
@@ -106,12 +119,13 @@ button {
     box-sizing: border-box;
     margin-bottom: 15px;
     width: 100%;
-    height: 3em;
+    height: 3.5em;
 }
 
 button[name="start"] {
     width: 150px;
     height: 3.5em;
+    background-color: rgba(222, 222, 255, .4);
 }
 
 button img {
@@ -134,21 +148,18 @@ button img {
 
 .mobile__disclaimer {
     display: none;
-    position: absolute;
     padding: 20px;
-    text-align: center;
-    bottom: 75px;
+    text-align: center;    
     color: #aaa;
     border: 1px dashed #aaa;
-    width: 84%;
-    margin: 0 auto;
+    width: 90%;
+    margin: 20px auto;
+    box-sizing: border-box;
 }
 
 
 footer {
-    position: fixed;
-    bottom: 0;
-    height: 70px;
+    height: 40px;
     width: 100%;
     text-align: left;
     display: inline-flex;
@@ -176,7 +187,7 @@ footer {
 .fa {
     font-size: 2em;
     padding: 0 5px;
-    
+    color: #111;
 }
 
 .fa-github {
@@ -184,6 +195,11 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
+    
+    header {
+        padding: 10px 15px 0;    
+    }
+    
     h1 {
         line-height: 1.2em;
         margin: 0;
@@ -198,11 +214,17 @@ footer {
     }
     
     #AIanswer, #current, #input {
-        height: 1.3em;
+        height: 1.8em;
+    }
+    
+    #submit {
+        height: 3em;
     }
     
     #game {
-        max-height: 30vh;
+        height: 30vh;
+        min-height: 200px;
+        z-index: 10;
     }
     
     .mobile__disclaimer {
